--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,14 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependências e Builds
 node_modules
 dist
 dist-ssr
 *.local
+
+# Arquivos de configuração sensíveis
+.env
 
 # Editor directories and files
 .vscode/*
